# mbc

./: .gitignore  README.md
backend/: generate_key.js  key.json  key_output.txt  package-lock.json  package.json  setup_env.js  show_relayer_pubkey.js  verify_env.js
backend/scripts/: verify_flow.ts
backend/src/: index.ts
backend/src/db/: index.ts  schema.sql
backend/src/idl/: agent_blink_pay.json
backend/src/routes/: actions.ts  agents.ts  providers.ts  x402.ts
backend/src/services/: circle.ts  solanaListener.ts
backend/tests/: flow.test.ts
examples/: catan-demo.ts
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/agents/: page.tsx
frontend/app/providers/: page.tsx
onchain/: Anchor.toml
onchain/programs/agent_blink_pay/: Cargo.toml
onchain/programs/agent_blink_pay/src/: lib.rs
onchain/tests/: agent_blink_pay.ts
sdk/: package-lock.json  package.json
sdk/src/: index.ts
zk/: README.md
zk/payment_policy/: Nargo.toml
zk/payment_policy/src/: main.nr
