[package]
name = "agent-blink-pay"
version = "0.1.0"
description = "AgentBlinkPay - Solana program for ZK-enforced agent payment policies"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_blink_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
